Initial Czech submission by Robert Stodulka (robert.stodulka AT seznam DOT cz). 11.10% complete.

--- a/lib/messagebundles/MessagesBundle_cs.properties
+++ b/lib/messagebundles/MessagesBundle_cs.properties
@@ -1,7 +1,7 @@
 ################################################################################
 # Messages Bundle for LimeWire 4.8.2
 # Specialization for: Czech - Czech Republik
-# Dummy resources bundle for missing translation.
+# Robert Stod\u016flka (http://linux-expert.net)
 ################################################################################
 LOCALE_LANGUAGE_CODE=cs
 LOCALE_LANGUAGE_NAME=\u010ce\u0161tina
@@ -42,175 +42,175 @@ HAS_TIPS_OF_THE_DAY=false
 # Keys/value pairs for general strings that can be used in any components
 ################################################################################
 #### GENERAL_OK_BUTTON_LABEL=OK
-#? GENERAL_OK_BUTTON_LABEL=
+GENERAL_OK_BUTTON_LABEL=Ano
 #### GENERAL_OK_BUTTON_TIP=Apply Operation.
-#? GENERAL_OK_BUTTON_TIP=
+GENERAL_OK_BUTTON_TIP=Potvrdit zm\u011bny.
 #### GENERAL_CANCEL_BUTTON_LABEL=Cancel
-#? GENERAL_CANCEL_BUTTON_LABEL=
+GENERAL_CANCEL_BUTTON_LABEL=Zru\u0161it
 #### GENERAL_CANCEL_BUTTON_TIP=Cancel Operation.
-#? GENERAL_CANCEL_BUTTON_TIP=
+GENERAL_CANCEL_BUTTON_TIP=Zru\u0161it operaci.
 #### GENERAL_APPLY_BUTTON_LABEL=Apply
-#? GENERAL_APPLY_BUTTON_LABEL=
+GENERAL_APPLY_BUTTON_LABEL=Pou\u017eít
 #### GENERAL_APPLY_BUTTON_TIP=Apply Operation.
-#? GENERAL_APPLY_BUTTON_TIP=
+GENERAL_APPLY_BUTTON_TIP=Pou\u017eít zm\u011bnu.
 #### GENERAL_CLOSE_BUTTON_LABEL=Close
-#? GENERAL_CLOSE_BUTTON_LABEL=
+GENERAL_CLOSE_BUTTON_LABEL=Zav\u0159ít
 #### GENERAL_CLOSE_BUTTON_TIP=Close the Window.
-#? GENERAL_CLOSE_BUTTON_TIP=
+GENERAL_CLOSE_BUTTON_TIP=Zav\u0159ít okno.
 #### GENERAL_BACK_BUTTON_LABEL=<< Back
-#? GENERAL_BACK_BUTTON_LABEL=
+GENERAL_BACK_BUTTON_LABEL=<< Zp\u011bt
 #### GENERAL_NEXT_BUTTON_LABEL=Next >>
-#? GENERAL_NEXT_BUTTON_LABEL=
+GENERAL_NEXT_BUTTON_LABEL=Dal\u0161í >>
 #### GENERAL_FINISH_BUTTON_LABEL=Finish
-#? GENERAL_FINISH_BUTTON_LABEL=
+GENERAL_FINISH_BUTTON_LABEL=Ukon\u010dit
 #### GENERAL_DEFAULT_BUTTON_LABEL=Use Default
-#? GENERAL_DEFAULT_BUTTON_LABEL=
+GENERAL_DEFAULT_BUTTON_LABEL=P\u0159ednadstavené hodnoty
 #### GENERAL_BROWSE_BUTTON_LABEL=Browse...
-#? GENERAL_BROWSE_BUTTON_LABEL=
+GENERAL_BROWSE_BUTTON_LABEL=Procházet...
 #### GENERAL_BROWSE_HOST_LABEL=Browse Host
-#? GENERAL_BROWSE_HOST_LABEL=
+GENERAL_BROWSE_HOST_LABEL=Prohlí\u017eet hosta
 #### GENERAL_BROWSE_HOST_TIP=View All Files on the Selected Computer
-#? GENERAL_BROWSE_HOST_TIP=
+GENERAL_BROWSE_HOST_TIP=Nakouknout do v\u0161ech soubor\u016f na vybraném po\u010díta\u010di.
 
 ################################################################################
 # Keys/value pairs for right-click context menus.
 ################################################################################
 #### CONTEXT_MENU_UNDO=Undo
-#? CONTEXT_MENU_UNDO=
+CONTEXT_MENU_UNDO=Zp\u011bt
 #### CONTEXT_MENU_CUT=Cut
-#? CONTEXT_MENU_CUT=
+CONTEXT_MENU_CUT=Vyst\u0159ihnout
 #### CONTEXT_MENU_COPY=Copy
-#? CONTEXT_MENU_COPY=
+CONTEXT_MENU_COPY=Kopírovat
 #### CONTEXT_MENU_PASTE=Paste
-#? CONTEXT_MENU_PASTE=
+CONTEXT_MENU_PASTE=Vlo\u017eit
 #### CONTEXT_MENU_DELETE=Delete
-#? CONTEXT_MENU_DELETE=
+CONTEXT_MENU_DELETE=Vymazat
 #### CONTEXT_MENU_SELECT_ALL=Select All
-#? CONTEXT_MENU_SELECT_ALL=
+CONTEXT_MENU_SELECT_ALL=Vybrat v\u0161e
 
 #Options
 #### OPTIONS_BUTTONS_OK_LABEL=OK
-#? OPTIONS_BUTTONS_OK_LABEL=
+OPTIONS_BUTTONS_OK_LABEL=Ano
 #### OPTIONS_BUTTONS_OK_TIP=Apply Your Changes and Close Window
-#? OPTIONS_BUTTONS_OK_TIP=
+OPTIONS_BUTTONS_OK_TIP=Potvrdit zm\u011bny a zav\u0159ít okno.
 #### OPTIONS_BUTTONS_CANCEL_LABEL=Cancel
-#? OPTIONS_BUTTONS_CANCEL_LABEL=
+OPTIONS_BUTTONS_CANCEL_LABEL=Zru\u0161it
 #### OPTIONS_BUTTONS_CANCEL_TIP=Cancel Your Changes and Close Window
-#? OPTIONS_BUTTONS_CANCEL_TIP=
+OPTIONS_BUTTONS_CANCEL_TIP=Zru\u0161it zm\u011bny a zav\u0159ít okno.
 #### OPTIONS_BUTTONS_APPLY_LABEL=Apply
-#? OPTIONS_BUTTONS_APPLY_LABEL=
+OPTIONS_BUTTONS_APPLY_LABEL=Pou\u017eít
 #### OPTIONS_BUTTONS_APPLY_TIP=Apply Your Changes
-#? OPTIONS_BUTTONS_APPLY_TIP=
+OPTIONS_BUTTONS_APPLY_TIP=Pou\u017eít zm\u011bny.
 #### OPTIONS_RESTART_REQUIRED=One or more options will take effect the next time LimeWire is restarted.
-#? OPTIONS_RESTART_REQUIRED=
+OPTIONS_RESTART_REQUIRED=Zm\u011bna se projeví po restartu LimeWire
 #### OPTIONS_BUTTON_REVERT_TO_DEFAULT=Restore Defaults
-#? OPTIONS_BUTTON_REVERT_TO_DEFAULT=
+OPTIONS_BUTTON_REVERT_TO_DEFAULT=Obnovit p\u016fvodní nastavení
 #### OPTIONS_BUTTON_REVERT_TO_DEFAULT_TIP=Revert All Settings to the Factory Defaults
-#? OPTIONS_BUTTON_REVERT_TO_DEFAULT_TIP=
+OPTIONS_BUTTON_REVERT_TO_DEFAULT_TIP=Vrátit v\u0161echna nastavení do p\u016fvodního.
 
 ################################################################################
 # Key/value pairs for general terms, such as "yes" and "no"
 ################################################################################
 #### YES=Yes
-#? YES=
+YES=Ano
 #### NO=No
-#? NO=
+NO=Ne
 
 ################################################################################
 # Key/value pairs for general informative terms
 ################################################################################
 #### GENERAL_AVERAGE_BANDWIDTH=Average Bandwidth
-#? GENERAL_AVERAGE_BANDWIDTH=
+GENERAL_AVERAGE_BANDWIDTH=Propustnost
 #### GENERAL_ALTERNATE_LOCATIONS=Valid Alternate Locations
-#? GENERAL_ALTERNATE_LOCATIONS=
+GENERAL_ALTERNATE_LOCATIONS=Platné dal\u0161í umíst\u011bní
 #### GENERAL_INVALID_ALTERNATE_LOCATIONS=Invalid Alternate Locations
-#? GENERAL_INVALID_ALTERNATE_LOCATIONS=
+GENERAL_INVALID_ALTERNATE_LOCATIONS=Neplatné dal\u0161í umíst\u011bní
 #### GENERAL_STARTED_ON=Started On
-#? GENERAL_STARTED_ON=
+GENERAL_STARTED_ON=Za\u010dalo
 #### GENERAL_FINISHED_ON=Finished On
-#? GENERAL_FINISHED_ON=
+GENERAL_FINISHED_ON=Ukon\u010deno
 #### GENERAL_TIME_SPENT=Time Spent
-#? GENERAL_TIME_SPENT=
+GENERAL_TIME_SPENT=Konec \u010dasového limitu
 #### GENERAL_REVERT_TO_DEFAULT=Revert To Default
-#? GENERAL_REVERT_TO_DEFAULT=
+GENERAL_REVERT_TO_DEFAULT=Vráátit p\u016fvodní hodnoty
 #### GENERAL_MORE_OPTIONS=More Options
-#? GENERAL_MORE_OPTIONS=
+GENERAL_MORE_OPTIONS=Více mo\u017eností
 
 # StatusLine, Statistics and GUIUtils
 #### GENERAL_UNIT_TERABYTES=TB
-#? GENERAL_UNIT_TERABYTES=
+GENERAL_UNIT_TERABYTES=TB
 #### GENERAL_UNIT_GIGABYTES=GB
-#? GENERAL_UNIT_GIGABYTES=
+GENERAL_UNIT_GIGABYTES=GB
 #### GENERAL_UNIT_MEGABYTES=MB
-#? GENERAL_UNIT_MEGABYTES=
+GENERAL_UNIT_MEGABYTES=MB
 #### GENERAL_UNIT_KILOBYTES=KB
-#? GENERAL_UNIT_KILOBYTES=
+GENERAL_UNIT_KILOBYTES=KB
 #### GENERAL_UNIT_KBPSEC=KB/s
-#? GENERAL_UNIT_KBPSEC=
+GENERAL_UNIT_KBPSEC=KB/s
 
 ################################################################################
 # Key/value pair for the main application title
 ################################################################################
 #### APP_TITLE=LimeWire: Enabling Open Information Sharing
-#? APP_TITLE=
+APP_TITLE=Informace o sdílení
 
 ################################################################################
 # Key/Value pairs for the about window, accessed through the help menu
 ################################################################################
 #### ABOUT_TITLE=About LimeWire
-#? ABOUT_TITLE=
+ABOUT_TITLE=O LimeWire
 #### ABOUT_LABEL_START=LimeWire
-#? ABOUT_LABEL_START=
+ABOUT_LABEL_START=LimeWire
 #### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
-#? ABOUT_LABEL_END=
+ABOUT_LABEL_END=Autorská práva (c)2000-2005 Lime Wire LLC
 #### ABOUT_LABEL_TITLE=About LimeWire
-#? ABOUT_LABEL_TITLE=
+ABOUT_LABEL_TITLE=O Limewire
 #### ABOUT_CREDITS_LABEL=Credits
-#? ABOUT_CREDITS_LABEL=
+ABOUT_CREDITS_LABEL=Kredity
 #### ABOUT_CREDITS_TIP=Display credits information about LimeWire.
-#? ABOUT_CREDITS_TIP=
+ABOUT_CREDITS_TIP=Ukázat kredit o LimeWire.
 #### ABOUT_NOTICE_LABEL=Notice
-#? ABOUT_NOTICE_LABEL=
+ABOUT_NOTICE_LABEL=Poznámka
 #### ABOUT_NOTICE_TIP=Display distribution and contact information.
-#? ABOUT_NOTICE_TIP=
+ABOUT_NOTICE_TIP=Ukázat distributora a kontaktní informace.
 #### ABOUT_LICENSE_LABEL=License
-#? ABOUT_LICENSE_LABEL=
+ABOUT_LICENSE_LABEL=Smlouva
 #### ABOUT_LICENSE_TIP=Display the license agreement about this software.
-#? ABOUT_LICENSE_TIP=
+ABOUT_LICENSE_TIP=Ukázát licen\u010dní podmínky o tomto softvéru.
 #### ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
-#? ABOUT_SCROLL_CHECK_BOX_LABEL=
+ABOUT_SCROLL_CHECK_BOX_LABEL=Automaticky posouvat
 #### ABOUT_BUTTON_TIP=Close the About Window
-#? ABOUT_BUTTON_TIP=
+ABOUT_BUTTON_TIP=Zav\u0159ít okno.
 
 ###################################################################
 # Key/value pairs for the tip of the day window (not the tips themselves)
 ###################################################################
 #### TOTD_TITLE=Tip of the Day
-#? TOTD_TITLE=
+TOTD_TITLE=Tip dne
 #### TOTD_INTRODUCTION=Did You Know...
-#? TOTD_INTRODUCTION=
+TOTD_INTRODUCTION=Víte, \u017ee...
 #### TOTD_SHOW_AT_STARTUP=Show Tips At Startup
-#? TOTD_SHOW_AT_STARTUP=
+TOTD_SHOW_AT_STARTUP=Ukazovat tipy p\u0159i startu
 #### TOTD_NEXT=Next Tip
-#? TOTD_NEXT=
+TOTD_NEXT=Dal\u0161í tip
 #### TOTD_PREVIOUS=Previous Tip
-#? TOTD_PREVIOUS=
+TOTD_PREVIOUS=P\u0159edchozí tip
 #### TOTD_CLOSE=Close
-#? TOTD_CLOSE=
+TOTD_CLOSE=Zav\u0159ít
 
 ###################################################################
 # Key/value pairs for the Getting Started image
 ###################################################################
 #### GETTING_STARTED_TITLE=Getting Started
-#? GETTING_STARTED_TITLE=
+GETTING_STARTED_TITLE=Za\u010dít
 #### GETTING_STARTED_CONTENTS=To start using LimeWire, find the text field on the left, type in what you are looking for and click the "Search" button. If you are looking for only one type of content (music, video, etc...), you can narrow your search results by using the buttons above the text field.
-#? GETTING_STARTED_CONTENTS=
+GETTING_STARTED_CONTENTS=Kdy\u017e spustíte LimeWire, najd\u011bte textové pole nalevo, napi\u0161te, co hledáte a klikn\u011bte na tla\u010dítko "Hledej \u0160mudlo". Jesti\u017ee hledáte pouze jeden typ soubor\u016f z více (hudba, video, atd...), m\u016f\u017eete nasm\u011brovat va\u0161e hledání pou\u017eítí tla\u010dítek dole pod txtovým polem.
 
 ###################################################################
 # Key/value pairs for the Going Pro image.
 ###################################################################
 #### GOING_PRO_TITLE=The Most Advanced File Sharing Program on the Planet!
-#? GOING_PRO_TITLE=
+GOING_PRO_TITLE=Nejro\u0161í\u0159en\u011bj\u0161í sdílení soubour\u016f na Yemi!
 #### GOING_PRO_DESCRIPTION=Better search results\nTurbo charged download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
 #? GOING_PRO_DESCRIPTION=
 
@@ -218,101 +218,101 @@ HAS_TIPS_OF_THE_DAY=false
 # Key/value pairs for the Windows system tray
 ###################################################################
 #### TRAY_TOOLTIP=LimeWire: Running the Gnutella Network
-#? TRAY_TOOLTIP=
+TRAY_TOOLTIP=LimeWire: Sí\u0165 Gnutella
 #### TRAY_RESTORE_LABEL=Restore
-#? TRAY_RESTORE_LABEL=
+TRAY_RESTORE_LABEL=Vrátit
 #### TRAY_ABOUT_LABEL=About
-#? TRAY_ABOUT_LABEL=
+TRAY_ABOUT_LABEL=O nás
 #### TRAY_EXIT_LATER_LABEL=Exit after Transfers
-#? TRAY_EXIT_LATER_LABEL=
+TRAY_EXIT_LATER_LABEL=Ukon\u010dit po sta\u017eení
 #### TRAY_EXIT_LABEL=Exit
-#? TRAY_EXIT_LABEL=
+TRAY_EXIT_LABEL=Ukon\u010dit
 
 ################################################################################
 # Key/value pairs for the titles of the main windows
 ################################################################################
 #### SEARCH_TITLE=Search
-#? SEARCH_TITLE=
+SEARCH_TITLE=Hledej \u0160mudlo
 #### MONITOR_TITLE=Monitor
-#? MONITOR_TITLE=
+MONITOR_TITLE=Sledovat
 #### CONNECTIONS_TITLE=Connections
-#? CONNECTIONS_TITLE=
+CONNECTIONS_TITLE=Spojení
 #### LIBRARY_TITLE=Library
-#? LIBRARY_TITLE=
+LIBRARY_TITLE=Knihovna
 #### OPTIONS_TITLE=Options
-#? OPTIONS_TITLE=
+OPTIONS_TITLE=Mo\u017enosti
 #### STATS_TITLE=Statistics
-#? STATS_TITLE=
+STATS_TITLE=Statistiky
 #### DOWNLOAD_TITLE=Downloads
-#? DOWNLOAD_TITLE=
+DOWNLOAD_TITLE=Stahování
 #### UPLOAD_TITLE=Uploads
-#? UPLOAD_TITLE=
+UPLOAD_TITLE=Stahující ode mne
 
 ################################################################################
 # Key/value pairs for the tooltips of the main windows
 ################################################################################
 #### SEARCH_TIP=Search and Download Files
-#? SEARCH_TIP=
+SEARCH_TIP=Hledej a stahuj.
 #### MONITOR_TIP=View Searches and Uploads
-#? MONITOR_TIP=
+MONITOR_TIP=Ukázat Hledané a stahující.
 #### CONNECTIONS_TIP=Show Connections to Other Clients
-#? CONNECTIONS_TIP=
+CONNECTIONS_TIP=Ukazázat spojení ostatním klient\u016fm.
 #### LIBRARY_TIP=View Repository of Saved Files
-#? LIBRARY_TIP=
+LIBRARY_TIP=Ukázat umíst\u011bní ulo\u017eených soubor\u016f.
 
 ################################################################################
 # Key/Value pairs for the pull-down menus in the main window
 ################################################################################
 #### MENU_FILE_TITLE=File
-#? MENU_FILE_TITLE=
+MENU_FILE_TITLE=Soubor
 #### MENU_FILE_TITLE_MNEMONIC=F
-#? MENU_FILE_TITLE_MNEMONIC=
+MENU_FILE_TITLE_MNEMONIC=S
 #### MENU_FILE_CLOSE=Close
-#? MENU_FILE_CLOSE=
+MENU_FILE_CLOSE=Zav\u0159ít
 #### MENU_FILE_CLOSE_MNEMONIC=C
-#? MENU_FILE_CLOSE_MNEMONIC=
+MENU_FILE_CLOSE_MNEMONIC=Z
 #### MENU_FILE_CLOSE_ACCESSIBLE=Close the Program
-#? MENU_FILE_CLOSE_ACCESSIBLE=
+MENU_FILE_CLOSE_ACCESSIBLE=Ukon\u010dit program.
 #### MENU_FILE_QUIT=Quit
-#? MENU_FILE_QUIT=
+MENU_FILE_QUIT=Konec
 #### MENU_FILE_QUIT_MNEMONIC=Q
-#? MENU_FILE_QUIT_MNEMONIC=
+MENU_FILE_QUIT_MNEMONIC=K
 #### MENU_FILE_CONNECT=Connect
-#? MENU_FILE_CONNECT=
+MENU_FILE_CONNECT=Spojení
 #### MENU_FILE_CONNECT_MNEMONIC=O
-#? MENU_FILE_CONNECT_MNEMONIC=
+MENU_FILE_CONNECT_MNEMONIC=S
 #### MENU_FILE_CONNECT_ACCESSIBLE=Connect to the Network
-#? MENU_FILE_CONNECT_ACCESSIBLE=
+MENU_FILE_CONNECT_ACCESSIBLE=P\u0159ipojit k síti.
 #### MENU_FILE_DISCONNECT=Disconnect
-#? MENU_FILE_DISCONNECT=
+MENU_FILE_DISCONNECT=Odpojit
 #### MENU_FILE_DISCONNECT_MNEMONIC=I
-#? MENU_FILE_DISCONNECT_MNEMONIC=
+MENU_FILE_DISCONNECT_MNEMONIC=D
 #### MENU_FILE_DISCONNECT_ACCESSIBLE=Disconnect from the Network
-#? MENU_FILE_DISCONNECT_ACCESSIBLE=
+MENU_FILE_DISCONNECT_ACCESSIBLE=Odpojit od sít\u011b.
 #### MENU_FILE_LIBRARY_ADD_SHARED_FOLDER=Add Folder to Share
-#? MENU_FILE_LIBRARY_ADD_SHARED_FOLDER=
+MENU_FILE_LIBRARY_ADD_SHARED_FOLDER=P\u0159idat cestu ke sdílení
 #### MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_MNEMONIC=A
-#? MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_MNEMONIC=
+MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_MNEMONIC=A
 #### MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_ACCESSIBLE=Add a Folder that You Would Like to Share
-#? MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_ACCESSIBLE=
+MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_ACCESSIBLE=P\u0159idat slo\u017eku, kterou chcete sdílet.
 #### MENU_FILE_LIBRARY_NEW_FOLDER=New Folder
-#? MENU_FILE_LIBRARY_NEW_FOLDER=
+MENU_FILE_LIBRARY_NEW_FOLDER=Nová slo\u017eka
 #### MENU_FILE_LIBRARY_NEW_FOLDER_MNEMONIC=N
-#? MENU_FILE_LIBRARY_NEW_FOLDER_MNEMONIC=
+MENU_FILE_LIBRARY_NEW_FOLDER_MNEMONIC=N
 #### MENU_FILE_LIBRARY_NEW_FOLDER_ACCESSIBLE=Add a Folder to the Selected Library Folder
-#? MENU_FILE_LIBRARY_NEW_FOLDER_ACCESSIBLE=
+MENU_FILE_LIBRARY_NEW_FOLDER_ACCESSIBLE=P\u0159idat slo\u017eku do vybrané knihovny.
 #### MENU_FILE_LIBRARY_UNSHARE_FOLDER=Stop Sharing Folder
-#? MENU_FILE_LIBRARY_UNSHARE_FOLDER=
+MENU_FILE_LIBRARY_UNSHARE_FOLDER=Zastavit sdílení slo\u017eky
 #### MENU_FILE_LIBRARY_UNSHARE_FOLDER_MNEMONIC=P
-#? MENU_FILE_LIBRARY_UNSHARE_FOLDER_MNEMONIC=
+MENU_FILE_LIBRARY_UNSHARE_FOLDER_MNEMONIC=P
 #### MENU_FILE_LIBRARY_UNSHARE_FOLDER_ACCESSIBLE=Stop Sharing the Selected Library Folder
-#? MENU_FILE_LIBRARY_UNSHARE_FOLDER_ACCESSIBLE=
+MENU_FILE_LIBRARY_UNSHARE_FOLDER_ACCESSIBLE=Zastavit sdilení ve vybrané slo\u017ece knihovny.
 #### MENU_FILE_LIBRARY_RENAME_FOLDER=Rename Folder
-#? MENU_FILE_LIBRARY_RENAME_FOLDER=
+MENU_FILE_LIBRARY_RENAME_FOLDER=P\u0159ejmenovat slo\u017eku
 #### MENU_FILE_LIBRARY_RENAME_FOLDER_MNEMONIC=R
-#? MENU_FILE_LIBRARY_RENAME_FOLDER_MNEMONIC=
+MENU_FILE_LIBRARY_RENAME_FOLDER_MNEMONIC=R
 #### MENU_FILE_LIBRARY_RENAME_FOLDER_ACCESSIBLE=Rename the Selected Library Folder
-#? MENU_FILE_LIBRARY_RENAME_FOLDER_ACCESSIBLE=
+MENU_FILE_LIBRARY_RENAME_FOLDER_ACCESSIBLE=P\u0159ejmenovat slo\u017eku ve vybrané knihovn\u011b.
 #### MENU_FILE_LIBRARY_LAUNCH_FILES=Launch File(s)
 #? MENU_FILE_LIBRARY_LAUNCH_FILES=
 #### MENU_FILE_LIBRARY_LAUNCH_FILES_MNEMONIC=L
@@ -465,9 +465,9 @@ HAS_TIPS_OF_THE_DAY=false
 #### MENU_RESOURCES_TITLE_MNEMONIC=R
 #? MENU_RESOURCES_TITLE_MNEMONIC=
 #### MENU_RESOURCES_PRO=LimeWire PRO
-#? MENU_RESOURCES_PRO=
+MENU_RESOURCES_PRO=LimeWire PRO
 #### MENU_RESOURCES_PRO_MNEMONIC=P
-#? MENU_RESOURCES_PRO_MNEMONIC=
+MENU_RESOURCES_PRO_MNEMONIC=P
 #### MENU_RESOURCES_PRO_ACCESSIBLE=Display the LimeWire PRO Website
 #? MENU_RESOURCES_PRO_ACCESSIBLE=
 
