Center search icon above tabs in mainframe vertically. Use constant in ConnectionSettings. Added CopyMagnetLinkToClipboardAction. ToolTip texts for mediatype buttons in search input panel.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -352,7 +352,7 @@ SEARCH_PUBLIC_STOP_STRING=Stop Search
 SEARCH_PUBLIC_BROWSE_STRING=Browse Host
 SEARCH_PUBLIC_CHAT_STRING=Chat With Host
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Bitzi Web Lookup...
-SEARCH_PUBLIC_MAGNET_LOOKUP_STRING=Magnet details for file
+SEARCH_PUBLIC_MAGNET_LOOKUP_STRING=Magnet Details for File
 SEARCH_PUBLIC_HTTP_PAGE_STRING=Web page for file(s)
 SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Repeat Search
 SEARCH_PUBLIC_BLOCK_STRING=Block Host
@@ -382,6 +382,11 @@ SEARCH_WHATSNEW_DESC=A "What's New" search will search for files that have been 
 SEARCH_CURRENT_SEARCH=Current Search:
 SEARCH_WHATS_NEW_SMALL=New
 SEARCH_SELECT_TYPE=Select Type:
+SEARCH_MEDIA_DOCUMENTS_TOOLTIP=Search for Document Files, Including html, txt, pdf, and More
+SEARCH_MEDIA_PROGRAMS_TOOLTIP=Search for Program Files, Including exe, zip, gz, and More
+SEARCH_MEDIA_AUDIO_TOOLTIP=Search For Audio Files, Including mp3, wav, ogg, and More
+SEARCH_MEDIA_VIDEO_TOOLTIP=Search For Video Files, Including avi, mpg, wmv, and More
+SEARCH_MEDIA_IMAGES_TOOLTIP=Search For Image Files, Including jpg, gif, png and More
 SEARCH_FILTER_RESULTS=Filter Results:
 SEARCH_BACK_TO_SEARCH=Back To Search
 SEARCH_BLOCK_HOST=Do you want to block search results from the host at
@@ -672,6 +677,7 @@ LIBRARY_TABLE_HITCOUNT=Hits
 LIBRARY_TABLE_NUMALTLOC=Locations
 LIBRARY_TABLE_LICENSE=License
 LIBRARY_TABLE_UPLOAD_COUNT=Uploads
+LIBRARY_TABLE_ADVANCED_POPUP_MENU=Advanced
 LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Stop Sharing
 LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
@@ -2348,3 +2354,6 @@ ALL_OOB_RESPONSES=Responses Received
 ALL_OOB_BYPASSED=Responses Bypassed
 STATS_OOB_THROUGHPUT_TITLE=OOB Success Rate
 STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OOB Protocol
+
+MAGNET_COPY_MAGNET_LINKS_LABEL=Copy Magnet Links to Clipboard
+MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the selected Files to the Clipboard
