Include some corrections sent by "Jasper Berkhout" <jasper_ber AT hotmail DOT com>, and reviewed by "Rinse de Vries" <rinse AT kde DOT nl>.

--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -58,7 +58,7 @@ GENERAL_CLOSE_BUTTON_LABEL=Sluiten
 #### GENERAL_CLOSE_BUTTON_TIP=Close the Window.
 GENERAL_CLOSE_BUTTON_TIP=Sluit het scherm af.
 #### GENERAL_BACK_BUTTON_LABEL=<< Back
-GENERAL_BACK_BUTTON_LABEL=<< Terug
+GENERAL_BACK_BUTTON_LABEL=<< Vorige
 #### GENERAL_NEXT_BUTTON_LABEL=Next >>
 GENERAL_NEXT_BUTTON_LABEL=Volgende >>
 #### GENERAL_FINISH_BUTTON_LABEL=Finish
@@ -86,7 +86,7 @@ CONTEXT_MENU_PASTE=Plakken
 #### CONTEXT_MENU_DELETE=Delete
 CONTEXT_MENU_DELETE=Verwijder
 #### CONTEXT_MENU_SELECT_ALL=Select All
-CONTEXT_MENU_SELECT_ALL=Selecteer alles
+CONTEXT_MENU_SELECT_ALL=Alles selecteren
 
 #Options
 #### OPTIONS_BUTTONS_OK_LABEL=OK
@@ -152,7 +152,7 @@ GENERAL_UNIT_KBPSEC=kB/s
 # Key/value pair for the main application title
 ################################################################################
 #### APP_TITLE=LimeWire: Enabling Open Information Sharing
-APP_TITLE=LimeWire: voor het delen van open informatie!
+APP_TITLE=LimeWire: maakt open informatie delen mogelijk!
 
 ################################################################################
 # Key/Value pairs for the about window, accessed through the help menu
@@ -212,7 +212,7 @@ GETTING_STARTED_CONTENTS=Gebruik LimeWire, zoek het zoekveld aan de linker kant,
 #### GOING_PRO_TITLE=The Most Advanced File Sharing Program on the Planet!
 GOING_PRO_TITLE=De meest geavanceerde bestanden delen op het NET!
 #### GOING_PRO_DESCRIPTION=Better search results\nTurbo charged download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
-GOING_PRO_DESCRIPTION=Het betere zoeken werkt in\nde Turbo geladen Verbindingen met downloadsnelheden\nvan meer bronnen\nGepersonaliseerde technologiesteun\nmet Zes maanden vrije updates
+GOING_PRO_DESCRIPTION=Betere zoekresultaten.\nTurbo downloadsnelheden.\nVerbindingen met meer bronnen.\nGepersonaliseerde technologiesteun.\nMet Zes maanden gratis updates.
 
 ###################################################################
 # Key/value pairs for the Windows system tray
@@ -224,7 +224,7 @@ TRAY_RESTORE_LABEL=Herstellen
 #### TRAY_ABOUT_LABEL=About
 TRAY_ABOUT_LABEL=Over...
 #### TRAY_EXIT_LATER_LABEL=Exit after Transfers
-TRAY_EXIT_LATER_LABEL=Afsluiten na de gegevensoverdracht
+TRAY_EXIT_LATER_LABEL=Afsluiten na gegevensoverdrachten
 #### TRAY_EXIT_LABEL=Exit
 TRAY_EXIT_LABEL=Afsluiten
 
@@ -272,7 +272,7 @@ MENU_FILE_CLOSE=Sluiten
 #### MENU_FILE_CLOSE_MNEMONIC=C
 MENU_FILE_CLOSE_MNEMONIC=S
 #### MENU_FILE_CLOSE_ACCESSIBLE=Close the Program
-MENU_FILE_CLOSE_ACCESSIBLE=Sluit het programma af.
+MENU_FILE_CLOSE_ACCESSIBLE=Programma afsluiten.
 #### MENU_FILE_QUIT=Quit
 MENU_FILE_QUIT=Afsluiten
 #### MENU_FILE_QUIT_MNEMONIC=Q
@@ -314,7 +314,7 @@ MENU_FILE_LIBRARY_RENAME_FOLDER_MNEMONIC=M
 #### MENU_FILE_LIBRARY_RENAME_FOLDER_ACCESSIBLE=Rename the Selected Library Folder
 MENU_FILE_LIBRARY_RENAME_FOLDER_ACCESSIBLE=Wijzig de naam van de geselecteerde 'Mediatheek'-directory.
 #### MENU_FILE_LIBRARY_LAUNCH_FILES=Launch File(s)
-MENU_FILE_LIBRARY_LAUNCH_FILES=Bestand uitvoeren
+MENU_FILE_LIBRARY_LAUNCH_FILES=Bestand(en) uitvoeren
 #### MENU_FILE_LIBRARY_LAUNCH_FILES_MNEMONIC=L
 MENU_FILE_LIBRARY_LAUNCH_FILES_MNEMONIC=O
 #### MENU_FILE_LIBRARY_LAUNCH_FILES_ACCESSIBLE=Launch the Selected File(s)
@@ -336,7 +336,7 @@ MENU_FILE_LIBRARY_EXPLORE=Onderzoek
 #### MENU_FILE_LIBRARY_EXPLORE_MNEMONIC=X
 MENU_FILE_LIBRARY_EXPLORE_MNEMONIC=X
 #### MENU_FILE_LIBRARY_EXPLORE_ACCESSIBLE=Open Library Folder
-MENU_FILE_LIBRARY_EXPLORE_ACCESSIBLE=Open Mediatheek directory
+MENU_FILE_LIBRARY_EXPLORE_ACCESSIBLE=Open Mediatheek directory.
 
 #### MENU_NAV_TITLE=Navigation
 MENU_NAV_TITLE=Navigatie
@@ -388,7 +388,7 @@ MENU_VIEW_SHOW_HIDE_TITLE=Toon/Verberg
 #### MENU_VIEW_SHOW_HIDE_TITLE_MNEMONIC=W
 MENU_VIEW_SHOW_HIDE_TITLE_MNEMONIC=L
 #### MENU_VIEW_SHOW_HIDE_ACCESSIBLE=Show or Hide individual tabs
-MENU_VIEW_SHOW_HIDE_ACCESSIBLE=Toon/Verberg individueele tabs
+MENU_VIEW_SHOW_HIDE_ACCESSIBLE=Toon/Verberg individueele tabs.
 #### MENU_VIEW_MONITOR=Monitor
 MENU_VIEW_MONITOR=Overzicht
 #### MENU_VIEW_MONITOR_MNEMONIC=M
@@ -416,19 +416,19 @@ MENU_VIEW_THEMES_GET_MORE=Haal meer Skins
 #### MENU_VIEW_THEMES_GET_MORE_MNEMONIC=G
 MENU_VIEW_THEMES_GET_MORE_MNEMONIC=G
 #### MENU_VIEW_THEMES_GET_MORE_ACCESSIBLE=Find more skins from limewire.com
-MENU_VIEW_THEMES_GET_MORE_ACCESSIBLE=Zoek meer skins bij limewire.com
+MENU_VIEW_THEMES_GET_MORE_ACCESSIBLE=Zoek meer skins bij limewire.com.
 #### MENU_VIEW_THEMES_REFRESH=Refresh Skins
-MENU_VIEW_THEMES_REFRESH=Verfris skins
+MENU_VIEW_THEMES_REFRESH=Skins vernieuwen
 #### MENU_VIEW_THEMES_REFRESH_MNEMONIC=R
 MENU_VIEW_THEMES_REFRESH_MNEMONIC=R
 #### MENU_VIEW_THEMES_REFRESH_ACCESSIBLE=Reload available skins from disk
-MENU_VIEW_THEMES_REFRESH_ACCESSIBLE=Herlaad beschikbare skins van schijf
+MENU_VIEW_THEMES_REFRESH_ACCESSIBLE=Herlaad beschikbare skins van schijf.
 #### MENU_VIEW_THEMES_USE_DEFAULT=Use Default
 MENU_VIEW_THEMES_USE_DEFAULT=Gebruik standaard
 #### MENU_VIEW_THEMES_USE_DEFAULT_MNEMONIC=D
 MENU_VIEW_THEMES_USE_DEFAULT_MNEMONIC=D
 #### MENU_VIEW_THEMES_USE_DEFAULT_ACCESSIBLE=Use your default skin
-MENU_VIEW_THEMES_USE_DEFAULT_ACCESSIBLE=Gebruik de standaard skin
+MENU_VIEW_THEMES_USE_DEFAULT_ACCESSIBLE=Gebruik de standaard skin.
 #### MENU_VIEW_LANGS_TITLE=Change Language
 MENU_VIEW_LANGS_TITLE=Verander de taal
 #### MENU_VIEW_LANGS_TITLE_MNEMONIC=H
