Add new contextual menu items to copy Magnet links to clipboard, and new tooltips for media type buttons

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -659,21 +659,26 @@ SEARCH_WHATS_NEW_SMALL=Nouveau
 #### SEARCH_SELECT_TYPE=Select Type:
 SEARCH_SELECT_TYPE=Sélectionnez un type\u00a0:
 #### SEARCH_MEDIA_DOCUMENTS_TOOLTIP=Search for Document Files, Including html, txt, pdf, and More
-#? SEARCH_MEDIA_DOCUMENTS_TOOLTIP=
+SEARCH_MEDIA_DOCUMENTS_TOOLTIP=Recherche de documents, comme les fichiers HTML, textes, PDF, etc...
 #### SEARCH_MEDIA_PROGRAMS_TOOLTIP=Search for Program Files, Including exe, zip, gz, and More
-#? SEARCH_MEDIA_PROGRAMS_TOOLTIP=
+SEARCH_MEDIA_PROGRAMS_TOOLTIP=Recherche de programmes et applications, incluant les .exe, archives Zip, Gzip, etc...
 #### SEARCH_MEDIA_AUDIO_TOOLTIP=Search For Audio Files, Including mp3, wav, ogg, and More
-#? SEARCH_MEDIA_AUDIO_TOOLTIP=
+SEARCH_MEDIA_AUDIO_TOOLTIP=Recherche de média audio, incluant les formats MP3, WAV, Ogg, etc...
 #### SEARCH_MEDIA_VIDEO_TOOLTIP=Search For Video Files, Including avi, mpg, wmv, and More
-#? SEARCH_MEDIA_VIDEO_TOOLTIP=
+SEARCH_MEDIA_VIDEO_TOOLTIP=Recherche de média vidéo, incluant les formats AVI, MPEG, WMV, etc...
 #### SEARCH_MEDIA_IMAGES_TOOLTIP=Search For Image Files, Including jpg, gif, png and More
-#? SEARCH_MEDIA_IMAGES_TOOLTIP=
+SEARCH_MEDIA_IMAGES_TOOLTIP=Recherce d'images, incluant les formats JPEG, GIF, PNG, etc...
 #### SEARCH_FILTER_RESULTS=Filter Results:
 SEARCH_FILTER_RESULTS=Filtrer les résultats\u00a0:
 #### SEARCH_BACK_TO_SEARCH=Back To Search
 SEARCH_BACK_TO_SEARCH=Retour à la recherche
 #### SEARCH_BLOCK_HOST=Do you want to block search results from the host at
 SEARCH_BLOCK_HOST=Voulez-vous bloquer les résultats de recherche en provenance de l'hôte à
+
+#### MAGNET_COPY_MAGNET_LINKS_LABEL=Copy Magnet Links to Clipboard
+MAGNET_COPY_MAGNET_LINKS_LABEL=Copier les liens Magnet
+#### MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the selected Files to the Clipboard
+MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copie les liens Magnet des fichiers sélectionnés vers le presse-papiers.
 
 #Media Types
 #### MEDIA_ANY_TYPE=Any Type
@@ -1199,7 +1204,7 @@ LIBRARY_TABLE_LICENSE=Licence
 #### LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TABLE_UPLOAD_COUNT=Transférés
 #### LIBRARY_TABLE_ADVANCED_POPUP_MENU=Advanced
-#? LIBRARY_TABLE_ADVANCED_POPUP_MENU=
+LIBRARY_TABLE_ADVANCED_POPUP_MENU=Options avancées
 #### LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
 LIBRARY_TREE_NEW_FOLDER_LABEL=Nouveau dossier
 #### LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Stop Sharing
@@ -4035,8 +4040,3 @@ ALL_OOB_BYPASSED=Résultats ignorés
 STATS_OOB_THROUGHPUT_TITLE=Taux de succès en hors bande
 #### STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OOB Protocol
 STATS_OOB_THROUGHPUT_LABEL=Nombre de réponses demandées et reçues via le protocole hors bande
-
-#### MAGNET_COPY_MAGNET_LINKS_LABEL=Copy Magnet Links to Clipboard
-#? MAGNET_COPY_MAGNET_LINKS_LABEL=
-#### MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the selected Files to the Clipboard
-#? MAGNET_COPY_MAGNET_LINKS_TOOLTIP=
