--- a/lib/messagebundles/MessagesBundle_lt.properties
+++ b/lib/messagebundles/MessagesBundle_lt.properties
@@ -1,6 +1,6 @@
 ################################################################################
 # Messages Bundle for LimeWire 4.8.2
-# Specialization for: Lituanian - Lituania
+# Specialization for: Lithuanian - Lithuania
 # Dummy resources bundle for missing translation.
 ################################################################################
 LOCALE_LANGUAGE_CODE=lt
@@ -11,8 +11,8 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin (Baltic Rim)
-LOCALE_ENGLISH_LANGUAGE_NAME=Lituanian
-#? LOCALE_NSIS_NAME=
+LOCALE_ENGLISH_LANGUAGE_NAME=Lithuanian
+LOCALE_NSIS_NAME=Lithuanian
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
