--- a/lib/messagebundles/MessagesBundle_ms.properties
+++ b/lib/messagebundles/MessagesBundle_ms.properties
@@ -12,7 +12,7 @@ LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin
 LOCALE_ENGLISH_LANGUAGE_NAME=Malay
-#? LOCALE_NSIS_NAME=
+LOCALE_NSIS_NAME=Malaysian
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
