--- a/lib/messagebundles/MessagesBundle_be.properties
+++ b/lib/messagebundles/MessagesBundle_be.properties
@@ -12,7 +12,7 @@ LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Cyrl
 LOCALE_SCRIPT_NAME=Cyrillic
 LOCALE_ENGLISH_LANGUAGE_NAME=Belarussian
-#? LOCALE_NSIS_NAME=
+LOCALE_NSIS_NAME=Belarusian
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
