--- a/lib/messagebundles/MessagesBundle_lb.properties
+++ b/lib/messagebundles/MessagesBundle_lb.properties
@@ -12,7 +12,7 @@ LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin (Western European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Luxembourgish
-#? LOCALE_NSIS_NAME=
+LOCALE_NSIS_NAME=Luxembourgish
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
