--- a/lib/messagebundles/MessagesBundle_zh_TW.properties
+++ b/lib/messagebundles/MessagesBundle_zh_TW.properties
@@ -12,6 +12,7 @@ LOCALE_VARIANT_NAME=\u570b\u969b
 LOCALE_SCRIPT_CODE=Hani
 LOCALE_SCRIPT_NAME=Far-East Asian
 LOCALE_ENGLISH_LANGUAGE_NAME=Chinese (Traditional)
+LOCALE_NSIS_NAME=TradChinese
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
