Set additional language symbols currently supported by the NSIS installer. See http://cvs.sourceforge.net/viewcvs.py/nsis/NSIS/Contrib/Language%20files/

--- a/lib/messagebundles/MessagesBundle_be.properties
+++ b/lib/messagebundles/MessagesBundle_be.properties
@@ -1,6 +1,6 @@
 ################################################################################
 # Messages Bundle for LimeWire 4.8.2
-# Specialization for: Belarussian - Belarus
+# Specialization for: Belarusian - Belarus
 # Dummy resources bundle for missing translation.
 ################################################################################
 LOCALE_LANGUAGE_CODE=be
@@ -11,7 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Cyrl
 LOCALE_SCRIPT_NAME=Cyrillic
-LOCALE_ENGLISH_LANGUAGE_NAME=Belarussian
+LOCALE_ENGLISH_LANGUAGE_NAME=Belarusian
 LOCALE_NSIS_NAME=Belarusian
 
 ################################################################################
