--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -357,6 +357,7 @@ SEARCH_PUBLIC_HTTP_PAGE_STRING=Web page for file(s)
 SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Repeat Search
 SEARCH_PUBLIC_BLOCK_STRING=Block Host
 SEARCH_RESULT_TABLE_LABEL=Results
+SEARCH_RESULT_MENU_SEARCH_MORE_LABEL=Search More
 SEARCH_SEARCHING_LABEL=Searching...
 SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
 SEARCH_VIRUS_MSG_TWO=program and could contain a virus. Are
@@ -677,6 +678,7 @@ LIBRARY_TABLE_HITCOUNT=Hits
 LIBRARY_TABLE_NUMALTLOC=Locations
 LIBRARY_TABLE_LICENSE=License
 LIBRARY_TABLE_UPLOAD_COUNT=Uploads
+LIBRARY_TABLE_SEARCH_POPUP_MENU=Search
 LIBRARY_TABLE_ADVANCED_POPUP_MENU=Advanced
 LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Stop Sharing
@@ -2357,3 +2359,8 @@ STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OO
 
 MAGNET_COPY_MAGNET_LINKS_LABEL=Copy Magnet Links to Clipboard
 MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the selected Files to the Clipboard
+
+# Search actions
+SEARCH_FOR_KEYWORDS_ACTION_NAME=Search for Keywords: {0}
+SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Search "What''s New" for: {0}
+SEARCH_XML_FIELD_ACTION_NAME=Search for {0}: {1}
