--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -392,6 +392,11 @@ SEARCH_FILTER_RESULTS=Filter Results:
 SEARCH_BACK_TO_SEARCH=Back To Search
 SEARCH_BLOCK_HOST=Do you want to block search results from the host at
 
+# Search actions
+SEARCH_FOR_KEYWORDS_ACTION_NAME=Search for Keywords: {0}
+SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Search "What''s New" for: {0}
+SEARCH_XML_FIELD_ACTION_NAME=Search for {0}: {1}
+
 #Media Types
 MEDIA_ANY_TYPE=Any Type
 MEDIA_DOCUMENTS=Documents
@@ -621,6 +626,12 @@ MULTICAST_SPEED=Ethernet
 HTML_PAGE_TITLE=Download Page
 HTML_PAGE_LISTING=File Listing for
 HTML_PAGE_MAGNET=Magnet Links for Fast Downloads (if you have LimeWire installed)
+
+################################################################################
+# Magnet stuff
+################################################################################
+MAGNET_COPY_MAGNET_LINKS_LABEL=Copy Magnet Links to Clipboard
+MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the selected Files to the Clipboard
 
 ###################################################################
 # Key/value pairs for ConnectionView
@@ -2357,10 +2368,3 @@ ALL_OOB_BYPASSED=Responses Bypassed
 STATS_OOB_THROUGHPUT_TITLE=OOB Success Rate
 STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OOB Protocol
 
-MAGNET_COPY_MAGNET_LINKS_LABEL=Copy Magnet Links to Clipboard
-MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the selected Files to the Clipboard
-
-# Search actions
-SEARCH_FOR_KEYWORDS_ACTION_NAME=Search for Keywords: {0}
-SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Search "What''s New" for: {0}
-SEARCH_XML_FIELD_ACTION_NAME=Search for {0}: {1}
