--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -401,8 +401,12 @@ MAGNET_COPY_MAGNET_LINKS_TOOLTIP=Copy the Magnet Links of the selected Files to 
 ################################################################################
 # Search actions
 ################################################################################
+# {0} the space separated list of keywords
 SEARCH_FOR_KEYWORDS_ACTION_NAME=Search for Keywords: {0}
+# {0} the already translated mediatype
 SEARCH_WHATS_NEW_MEDIATYPE_ACTION_NAME=Search "What''s New" for: {0}
+# {0} the type of the search, e.g. Title, Album, Genre
+# {1} the keywords fo the search, e.g. name of the album
 SEARCH_XML_FIELD_ACTION_NAME=Search for {0}: {1}
 
 #Media Types
