--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -445,6 +445,8 @@ LIBRARY_ANNOTATE_BUTTON_TIP=Describe Selected File
 LIBRARY_RESUME_BUTTON_LABEL=Resume
 LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RENAME_BUTTON_LABEL=Rename
+LIBRARY_SHARED_FILES_CONFIGURE_EXPLAIN=In Options, you can configure the folders and extensions you share. 
+LIBRARY_SHARED_FILES_CONFIGURE=Configure...
 
 PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Play List
