De-compose LibraryTree into JTree subclass.  Also made it a Singleton, and replaced hackish popup menu with standard mouse listener from tables package (thanks to Sam for pointing this out).

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -445,7 +445,7 @@ LIBRARY_ANNOTATE_BUTTON_TIP=Describe Selected File
 LIBRARY_RESUME_BUTTON_LABEL=Resume
 LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RENAME_BUTTON_LABEL=Rename
-LIBRARY_SHARED_FILES_CONFIGURE_EXPLAIN=In Options, you can configure the folders and extensions you share. 
+LIBRARY_SHARED_FILES_CONFIGURE_EXPLAIN=You can configure the folders you share in LimeWire's Options. 
 LIBRARY_SHARED_FILES_CONFIGURE=Configure...
 
 PLAYLIST_LOAD_BUTTON_LABEL=Open...
