Change kill and launch buttons' labels and tooltips if a completed download is selected.  ('Clear' and 'Launch' replace 'Stop' and 'Preview'.)

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -438,17 +438,21 @@ SEARCH_FILTER_OPTIONS=Options
 SEARCH_FILTER_MEDIA=Media
 
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
-DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the Selected Downloads
+DOWNLOAD_LAUNCH_BUTTON_TIP=Preview Selected Downloads
+DOWNLOAD_LAUNCH_BUTTON_COMPLETED_LABEL=Launch
+DOWNLOAD_LAUNCH_BUTTON_COMPLETED_TIP=Launch Selected Downloads
 DOWNLOAD_KILL_BUTTON_LABEL=Stop
 DOWNLOAD_KILL_BUTTON_TIP=Stop Selected Downloads
+DOWNLOAD_KILL_BUTTON_COMPLETED_LABEL=Clear
+DOWNLOAD_KILL_BUTTON_COMPLETED_TIP=Clear Selected Downloads
 DOWNLOAD_RESUME_BUTTON_LABEL=Resume
-DOWNLOAD_RESUME_BUTTON_TIP=Try to Reattempt a Download
+DOWNLOAD_RESUME_BUTTON_TIP=Reattempt Selected Downloads
 DOWNLOAD_SOURCES_BUTTON_LABEL=Find Sources
-DOWNLOAD_SOURCES_BUTTON_TIP=Try to Find Sources for Failed Downloads
+DOWNLOAD_SOURCES_BUTTON_TIP=Try to Find Additional Sources for Downloads
 DOWNLOAD_CLEAR_BUTTON_LABEL=Clear Inactive
 DOWNLOAD_CLEAR_BUTTON_TIP=Remove Inactive Downloads
 DOWNLOAD_PAUSE_BUTTON_LABEL=Pause
-DOWNLOAD_PAUSE_BUTTON_TIP=Pause the Selected Downloads
+DOWNLOAD_PAUSE_BUTTON_TIP=Pause Selected Downloads
 
 LIBRARY_LAUNCH_BUTTON_LABEL=Launch
 LIBRARY_LAUNCH_BUTTON_TIP=Launch Selected Files
