Some String fixes: - Made sure LimeWire is properly is capitalized in all places - Made sure LimeWire PRO is properly capitalized in all places - Made the capitalization and spacing of "TURBOCHARGED", "TURBOcharged", "TurboCharged", and "Turbo Charged" consistently "TURBOCHARGED"

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -144,7 +144,7 @@ GETTING_STARTED_CONTENTS=To start using LimeWire, find the text field on the lef
 # Key/value pairs for the Going Pro image.
 ###################################################################
 GOING_PRO_TITLE=The Most Advanced File Sharing Program on the Planet!
-GOING_PRO_DESCRIPTION=Better search results\nTurbo charged download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
+GOING_PRO_DESCRIPTION=Better search results\nTURBOCHARGED download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
 
 ###################################################################
 # Key/value pairs for the Windows system tray
@@ -512,8 +512,8 @@ STATISTICS_CONNECTION_GOOD=Good
 STATISTICS_CONNECTION_GOOD_TIP=You are not yet fully connected to the network, but have a very good connection.
 STATISTICS_CONNECTION_EXCELLENT=Excellent
 STATISTICS_CONNECTION_EXCELLENT_TIP=Your connection to the network is very strong.
-STATISTICS_CONNECTION_TURBO_CHARGED=TurboCharged
-STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=You can experience TurboCharged connections all the time with LimeWire Pro.
+STATISTICS_CONNECTION_TURBO_CHARGED=TURBOCHARGED
+STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=You can experience TURBOCHARGED connections all the time with LimeWire PRO.
 STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Your connection to the network is extremely strong.
 STATISTICS_CONNECTION_QUALITY=Quality:
 STATISTICS_CONNECTION_IDLE=Idle
@@ -790,7 +790,7 @@ INIT_SAVE_DEFAULT_BUTTON_TIP=Use the Default Directory
 # Key/Value pairs for the pro window on startup
 ################################################################################
 PRO_TITLE=Upgrade to PRO
-PRO_LABEL_THANKS=For TURBOcharged downloads, get LimeWire PRO. We guarantee that you will love the improved performance of PRO. Thank you for helping keep the Internet open by running LimeWire.
+PRO_LABEL_THANKS=For TURBOCHARGED downloads, get LimeWire PRO. We guarantee that you will love the improved performance of PRO. Thank you for helping keep the Internet open by running LimeWire.
 PRO_LABEL_QUESTION=Upgrade to LimeWire PRO?
 GO_PRO_TIP=Get LimeWire PRO Now
 WHYGOPRO=Why
@@ -949,15 +949,15 @@ SHUTDOWN_WAIT=Please wait while LimeWire shuts down...
 # Key/value pairs for the message displayed to prompt users to
 # support LimeWire through contributions.
 ##################################################################
-SUPPORT_LIMEWIRE_01=For TURBO Charged searches get LimeWire Pro.
+SUPPORT_LIMEWIRE_01=For TURBOCHARGED searches get LimeWire PRO.
 SUPPORT_LIMEWIRE_02=Click here to support LimeWire's development of open, peer-to-peer networks.
-SUPPORT_LIMEWIRE_03=Purchase LimeWire Pro to help us make downloads faster.
-SUPPORT_LIMEWIRE_04=For TURBO Charged downloads get LimeWire Pro.
+SUPPORT_LIMEWIRE_03=Purchase LimeWire PRO to help us make downloads faster.
+SUPPORT_LIMEWIRE_04=For TURBOCHARGED downloads get LimeWire PRO.
 SUPPORT_LIMEWIRE_05=Support open networks.
 SUPPORT_LIMEWIRE_06=Click here to support open source and open protocols.
-SUPPORT_LIMEWIRE_07=For TURBO Charged Performance get LimeWire Pro.
-SUPPORT_LIMEWIRE_08=Keep the Internet open. Get Pro.
-SUPPORT_LIMEWIRE_09=Developing LimeWire costs real money. Get Pro.
+SUPPORT_LIMEWIRE_07=For TURBOCHARGED Performance get LimeWire PRO.
+SUPPORT_LIMEWIRE_08=Keep the Internet open.  Get LimeWire PRO.
+SUPPORT_LIMEWIRE_09=Developing LimeWire costs real money.  Get PRO.
 SUPPORT_LIMEWIRE_11=Help support sharing of independent media content.
 
 ################################################################################
@@ -994,7 +994,7 @@ MESSAGE_INCOMPLETE_DIRECTORY_END=the folder reserved for incomplete files.
 MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire was unable to use the specified directory for saving files. Please try a different directory.
 MESSAGE_FILE_CORRUPT=LimeWire has detected a corruption in the file
 MESSAGE_CONTINUE_DOWNLOAD=Do you want to continue the download?
-MESSAGE_LANG_CHANGE=Please note that you must restart limewire for the language to change. Also, make sure that you have the required fonts for the selected language.
+MESSAGE_LANG_CHANGE=Please note that you must restart LimeWire for the language to change.  Also, make sure that you have the required fonts for the selected language.
 MESSAGE_SENSITIVE_SHARE_TOP=You are attempting to share a folder that is likely to contain sensitive information:
 MESSAGE_SENSITIVE_SHARE_BOTTOM=Share this folder?
 
